--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -46,7 +46,7 @@
             </div>
             <div class="mainright" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine"
                 data-aos-duration="500">
-                <img src="/image/1.png">
+                <img src="image/1.png">
             </div>
         </div>
     </main>
@@ -77,7 +77,7 @@
     <div class="content">
         <div class="top container flex">
             <div class="top-left ">
-                <img src="/image/5.png">
+                <img src="image/5.png">
             </div>
             <div class="top-right">
                 <div class="right-text">
@@ -105,10 +105,10 @@
             </div>
             <div class="bottom-right">
                 <div class="bottom-image">
-                    <img src="/image/4.png">
+                    <img src="image/4.png">
                     <div class="image2" data-aos="fade-down-left" data-aos-easing="ease-in-sine"
                     data-aos-duration="500">
-                        <img src="/image/9.png">
+                        <img src="image/9.png">
                     </div>
                 </div>
             </div>
@@ -139,42 +139,42 @@
             </div>
             <div class="owl-carousel three">
                 <div class="card1">
-                    <img src="/image/3.png" alt="">
+                    <img src="image/3.png" alt="">
                     <h4>Rainbow vegetable Sandwich</h4>
                     <p>Time: 15 - 20 Minutes <span>Serves:1</span> </p>
                     <h3>$9.20 <del>$11.70</del></h3>
                     <a href="#" class="btn">Order Now<i class="fa fa-shopping-basket" aria-hidden="true"></i></a>
                 </div>
                 <div class="card1">
-                    <img src="/image/2.png" alt="">
+                    <img src="image/2.png" alt="">
                     <h4>Rainbow vegetable Sandwich</h4>
                     <p>Time: 15 - 20 Minutes <span>Serves:1</span> </p>
                     <h3>$12.50 <del>$15.70</del></h3>
                     <a href="#" class="btn">Order Now<i class="fa fa-shopping-basket" aria-hidden="true"></i></a>
                 </div>
                 <div class="card1">
-                    <img src="/image/6.png" alt="">
+                    <img src="image/6.png" alt="">
                     <h4>Rainbow vegetable Sandwich</h4>
                     <p>Time: 15 - 20 Minutes <span>Serves:1</span> </p>
                     <h3>$10.50 <del>$11.70</del></h3>
                     <a href="#" class="btn">Order Now<i class="fa fa-shopping-basket" aria-hidden="true"></i></a>
                 </div>
                 <div class="card1">
-                    <img src="/image/3.png" alt="">
+                    <img src="image/3.png" alt="">
                     <h4>Rainbow vegetable Sandwich</h4>
                     <p>Time: 15 - 20 Minutes <span>Serves:1</span> </p>
                     <h3>$9.20 <del>$11.70</del></h3>
                     <a href="#" class="btn">Order Now<i class="fa fa-shopping-basket" aria-hidden="true"></i></a>
                 </div>
                 <div class="card1">
-                    <img src="/image/2.png" alt="">
+                    <img src="image/2.png" alt="">
                     <h4>Rainbow vegetable Sandwich</h4>
                     <p>Time: 15 - 20 Minutes <span>Serves:1</span> </p>
                     <h3>$12.50 <del>$15.70</del></h3>
                     <a href="#" class="btn">Order Now<i class="fa fa-shopping-basket" aria-hidden="true"></i></a>
                 </div>
                 <div class="card1">
-                    <img src="/image/6.png" alt="">
+                    <img src="image/6.png" alt="">
                     <h4>Rainbow vegetable Sandwich</h4>
                     <p>Time: 15 - 20 Minutes <span>Serves:1</span> </p>
                     <h3>$10.50 <del>$11.70</del></h3>
@@ -194,7 +194,7 @@
             <div class="owl-carousel owl-theme one">
                 <div>
                     <div class="t-image">
-                        <img src="/image/8.png">
+                        <img src="image/8.png">
                     </div>
                     <p>"Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there
                         live
@@ -203,7 +203,7 @@
                 </div>
                 <div>
                     <div class="t-image ">
-                        <img src="/image/8.png">
+                        <img src="image/8.png">
                     </div>
                     <p>"Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there
                         live
